--- a/css/queries.css
+++ b/css/queries.css
@@ -102,7 +102,7 @@ https://css-tricks.com/optimizing-large-scale-displays/ */
 }
 
 /* GREATER THAN 2800px (Extra large screens) */
-@media (min-width: 175em) {  
+@media (min-width: 175em) { 
 
     /* HOME PAGE */
     .intro-col {
@@ -236,14 +236,21 @@ https://css-tricks.com/optimizing-large-scale-displays/ */
 /* LESS THAN 960px (Tablets) */
 @media (max-width: 60em) {
 
+
+    /* Adding this makes sticky nav not work but  */
+    body {
+        overflow-x: hidden;
+        height: 100vh;
+    }
+
     /* mobile navigation - using component from Omnifood course project */
     .btn-mobile-nav {
         display: block;
-        z-index: 9999;
+        z-index: 99999;
     }
 
     .main-nav {
-        background-color: rgba(255, 255, 255, 0.8);
+        background-color: rgba(255, 255, 255, 0.95);
         -webkit-backdrop-filter:  blur(5px);
         backdrop-filter:  blur(5px);
         position: absolute;
@@ -251,6 +258,8 @@ https://css-tricks.com/optimizing-large-scale-displays/ */
         left: 0;
         width: 100%;
         height: 100vh;
+
+        z-index: 9999;
     
         /* move all the way to right so you can't see the div until it's clicked */
         transform: translateX(100%);
